--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <div class="row">
           <div class="col-sm-12">
             <h2>Pleasure:<span class="pleasureactual"></span></h2>
-            <!--div class="progress">
+            <div class="progress">
               <div id="pleasureprogress" class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
-            </div-->
+            </div>
           </div>
         </div>
         <div class="row">
