pile of silhouette svg assets, and some structure to use them. still slowly migrating over from the old version.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,57 @@
     <section class="main">
       <div class="container">
         <div class="row">
+          <div class="col-sm-3 panel panel-full silhouette">
+            <div class="statuscontent">
+              silhouette display
+              status output
+              <div class="woman"></div>
+              <!-- <object type="image/svg+xml" data="/assets/svg/woman/1448007.svg" class="woman">
+                Kiwi Logo? fallback image in CSS 
+              </object> -->
+              <!-- <img src="assets/svg/woman/1939996.svg" alt="something?" class="woman" /> -->
+              <div class="background"></div>
+              <div class="progressbar" data-progress="30%">
+                <div class="fill"></div>
+              </div>
+              <div class="resources">
+                resources
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-9">
+            <div class="row">
+              <div class="col-sm-6 panel panel-40 statuslog">
+                <div class="display d-flex flex-column-reverse">
+                  <div class="item">Welcome</div>
+                </div>
+              </div>
+              <div class="col-sm-6 panel panel-40 adventurestatus">
+                adventure status
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-sm-6">
+                <div class="row">
+                  <div class="col-sm-12 panel panel-30 portaldetails">
+                    portal stuff
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-sm-12 panel panel-30 maincontrols">
+                    <div class="controlpanel">
+                      <button id="fondlebtn">Fondle</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm-6 panel panel-60 relics">
+                relics
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
           <div class="col-sm-12">
             <h2>Pleasure:<span class="pleasureactual"></span></h2>
             <div class="progress">
@@ -41,7 +92,7 @@
           </div>
           <div class="col-sm-4">
             <h3>Fondle?</h3>
-            <button id="fondlebtn">Fondle</button>
+            
             <hr />
             <h3>Shop:</h3>
             <button id="buy-vibe">Vibrator - (<span class="count">0</span>)</button>
